# kaggle-tabular-skill

./: .gitignore  CLAUDE.md  README.md  USAGE.md  install.sh  package.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.opencode/: INSTALL.md
.opencode/plugins/: kaggle-tabular.js
docs/superpowers/plans/: 2026-07-01-kaggle-tabular-plugin.md
docs/superpowers/specs/: 2026-07-01-kaggle-tabular-plugin-design.md
kaggle-tabular/: SKILL.md
kaggle-tabular/assets/template/: AGENTS.md  COMPETITION.md  justfile  pyproject.toml
kaggle-tabular/assets/template/src/: cv.py
kaggle-tabular/references/: feature-engineering.md  hard-rules.md  workflow-phases.md
learnings/: README.md  action_items.md  expert-pipeline.md  my-pipeline.md  refined-pipeline.md  s6e2_10th_place_writeup.md  s6e2_1st_place_writeup.md  s6e2_2nd_place_writeup.md  s6e2_3rd_place_writeup.md  s6e2_4th_place_writeup.md  s6e2_8th_place_writeup.md
plugins/kaggle-tabular/: USAGE.md  install.sh
plugins/kaggle-tabular/.claude-plugin/: plugin.json
skills/kaggle-tabular/: SKILL.md
skills/kaggle-tabular/assets/template/: .gitignore  AGENTS.md  COMPETITION.md  PROGRESS.md  pyproject.toml
skills/kaggle-tabular/assets/template/configs/optimize/: lgbm.yaml
skills/kaggle-tabular/assets/template/src/: cv.py  device.py  ensemble.py  finalize.py  tracking.py
skills/kaggle-tabular/assets/template/src/models/: base.py  cat.py  lgbm.py  logreg.py  xgb.py
skills/kaggle-tabular/assets/template/src/optimize/: optuna_search.py
skills/kaggle-tabular/references/: hard-rules.md  (+4 more)
(+17 files in other folders)
