[project]
name = "{{COMP_NAME}}"
version = "0.1.0"
description = "Kaggle tabular competition — kaggle-tabular skill workflow"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "scikit-learn",
    "lightgbm",
    "xgboost",
    "catboost",
    "optuna",
    "kaggle",
    "pyyaml",
    "matplotlib",
    "wandb",
    "tqdm",
    # small-data foundation model + automl (optional but recommended diversity):
    # "tabpfn",
    # "autogluon.tabular",
]

# GPU note: GBDT wrappers auto-detect CUDA via src/device.py and use it when present, no flag
# needed. For the RAPIDS stack (cudf-cu12, cuml-cu12) install per your CUDA version separately.

[tool.uv]
package = false
